<package>
  <name>ublox</name>
  <version>0.1.0</version>
  <description>Provides a ublox_gps node for uBlox GPS receivers and message and serialization packages for the binary UBX protocol.</description>
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ublox</url>
  <url type="bugtracker">http://github.com/tu-darmstadt-ros-pkg/ublox/issues</url>

  <author email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ublox_msgs</run_depend>
  <run_depend>ublox_gps</run_depend>
  <run_depend>ublox_serialization</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
