<package>
  <name>ublox_msgs</name>
  <version>0.1.0</version>
  <description>ublox_msgs contains raw messages used by GNSS receiver modules of the company u-blox AG.</description>
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ublox_msgs</url>
  <url type="bugtracker">http://github.com/tu-darmstadt-ros-pkg/ublox/issues</url>

  <author email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>ublox_serialization</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>ublox_serialization</run_depend>

  <export>
    <rosdoc external="http://www.u-blox.com/en/download/documents-a-resources.html"/>
  </export>
</package>
