<package>
  <name>ublox_serialization</name>
  <version>0.1.0</version>
  <description>ublox_serialization provides header files for serialization of ROS messages to and from u-blox message format.</description>
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ublox_serialization</url>
  <url type="bugtracker">http://github.com/tu-darmstadt-ros-pkg/ublox/issues</url>

  <author email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_serialization</run_depend>

  <export>
    <rosdoc external="http://www.u-blox.com/en/download/documents-a-resources.html"/>
  </export>
</package>
